<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.hoefel</groupId>
    <artifactId>coordinates</artifactId>
    <version>1.0.5</version>
    <packaging>jar</packaging>

    <name>coordinates</name>
    <description>A framework for handling coordinate systems.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <uhoefel.git.url>https://github.com/uhoefel/</uhoefel.git.url>
        <uhoefel.git.root>scm:git:ssh://git@github.com/uhoefel/</uhoefel.git.root>
        <junit.jupiter.version>5.8.2</junit.jupiter.version>
        <junit.platform.version>1.8.2</junit.platform.version>
        <jdk.version>18</jdk.version>
        <jvm.extraArgs>--enable-preview</jvm.extraArgs>
    </properties>

    <url>${uhoefel.git.url}${project.name}</url>
    <scm>
        <connection>${uhoefel.git.root}${project.name}.git</connection>
        <developerConnection>${uhoefel.git.root}${project.name}.git</developerConnection>
        <url>${uhoefel.git.url}${project.name}/tree/master</url>
    </scm>
    <issueManagement>
        <url>${uhoefel.git.url}${project.name}/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <developers>
        <developer>
            <name>Udo Höfel</name>
            <email>udo@hoefel.eu</email>
            <url>http://hoefel.eu</url>
            <id>uhoefel</id>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.platform.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>eu.hoefel</groupId>
            <artifactId>jatex</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>eu.hoefel</groupId>
            <artifactId>units</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>eu.hoefel</groupId>
            <artifactId>utils</artifactId>
            <version>0.2.3</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <name>Sonatype OSSRH</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>${jdk.version}</release>
                    <compilerArgs>${jvm.extraArgs}</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                </manifest>
                                <manifestEntries>
                                    <Build-Revision>${buildNumber}</Build-Revision>
                                    <Build-Branch>${scmBranch}</Build-Branch>
                                    <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                                </manifestEntries>
                            </archive>
                        </configuration>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <docfilessubdirs>true</docfilessubdirs>
                    <release>${jdk.version}</release>
                    <additionalOptions>${jvm.extraArgs}</additionalOptions>
                    <!--<doclint>none</doclint> To be removed -->
                    <encoding>UTF-8</encoding>
                    <tags>
                        <tag>
                            <name>apiNote</name>
                            <placement>a</placement>
                            <head>API Note:</head>
                        </tag>
                        <tag>
                            <name>implSpec</name>
                            <placement>a</placement>
                            <head>Implementation Requirements:</head>
                        </tag>
                        <tag>
                            <name>implNote</name>
                            <placement>a</placement>
                            <head>Implementation Note:</head>
                        </tag>
                        <!-- PLACEHOLDER TILL JAVA 18 IS HERE-->
                        <tag>
                            <name>snippet</name>
                            <placement>a</placement>
                            <head>SNIPPET TO BE REMOVED WITH JAVA 18</head>
                        </tag>
                    </tags>
                </configuration>
                <executions>
                    <execution>
                        <configuration>
                            <release>${jdk.version}</release>
                            <additionalOptions>${jvm.extraArgs}</additionalOptions>
                            <archive>
                                <manifest>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                </manifest>
                                <manifestEntries>
                                    <Build-Revision>${buildNumber}</Build-Revision>
                                    <Build-Branch>${scmBranch}</Build-Branch>
                                    <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                                </manifestEntries>
                            </archive>
                        </configuration>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>true</doCheck>
                    <doUpdate>true</doUpdate>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <Build-Revision>${buildNumber}</Build-Revision>
                            <Build-Branch>${scmBranch}</Build-Branch>
                            <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>de.sormuras.junit</groupId>
                <artifactId>junit-platform-maven-plugin</artifactId>
                <version>1.1.6</version>
                <extensions>true</extensions> <!-- Necessary to execute it in 'test' phase. -->
                <configuration>
                    <isolation>NONE</isolation> <!-- Version 1.0.0 defaults to ABSOLUTE. -->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <keyname>${gpg.keyname}</keyname>
                            <passphraseServerId>${gpg.keyname}</passphraseServerId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.12</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
